--- a/NLP_HW4.ipynb
+++ b/NLP_HW4.ipynb
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "3fd31546",
    "metadata": {},
    "outputs": [],
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "08c16ba7",
    "metadata": {},
    "outputs": [],
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "56a58114",
    "metadata": {},
    "outputs": [],
@@ -132,10 +132,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "d1a6012e",
+   "execution_count": 7,
+   "id": "f8abfeaf",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: './AM/wiki_74'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-7-a61a5bf519ac>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     20\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     21\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 22\u001b[1;33m         \u001b[0mfile\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mopen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfileName\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'r'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mencoding\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'utf-8'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     23\u001b[0m         \u001b[0mdataR\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     24\u001b[0m         \u001b[1;32mfor\u001b[0m \u001b[0mline\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mfile\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mreadlines\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: './AM/wiki_74'"
+     ]
+    }
+   ],
    "source": [
     "for FP in range(5):\n",
     "    foldName = ''\n",
@@ -170,8 +182,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "edda25fb",
+   "execution_count": 8,
+   "id": "fd4a1c6b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,8 +195,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "924239f0",
+   "execution_count": 9,
+   "id": "a2d59df6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,7 +216,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9e7766ec",
+   "id": "eab9964c",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -212,7 +224,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11c3f7a9",
+   "id": "86f3e77f",
    "metadata": {},
    "outputs": [],
    "source": []
