--- a/NLP_HW4.ipynb
+++ b/NLP_HW4.ipynb
@@ -133,7 +133,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "f8abfeaf",
+   "id": "61de7153",
    "metadata": {},
    "outputs": [
     {
@@ -183,7 +183,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "fd4a1c6b",
+   "id": "b679457b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,35 +196,185 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "a2d59df6",
+   "id": "952af33d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "f.close()"
+    "f.close()from gensim.models.word2vec import Word2Vec"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "5969dfdc",
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Data</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [Data]\n",
+       "Index: []"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "df = pd.DataFrame(columns = ['Data'])\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "deab9dc2",
+   "metadata": {},
    "outputs": [],
    "source": [
-    "from gensim.models.word2vec import Word2Vec"
+    "df['Data'] = texts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "586ab253",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Data</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>數學\\n\\n數學是利用符號語言研究數量、結構、變化以及空間等概念的一門學科，從某種角度看屬於...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>哲學\\n\\n哲學（）是研究普遍的、根本的問題的學科，包括存在、知識、價值、理智、心靈、語言等...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>文學\\n\\n文學（），在最廣泛的意義上，是任何單一的書面作品。\\n\\n更嚴格地說，文學寫作被...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>歷史\\n\\n歷史（現代漢語詞彙，古典文言文稱之爲史），指人類社會過去的事件和行動，以及對這些...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>計算機科學\\n\\n計算機科學（，有時縮寫爲）是系統性研究信息與計算的理論基礎以及它們在計算機...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1031615</th>\n",
+       "      <td>福暉\\n\\n福暉，原名福明（1796年 - ？），字子受，號鏡如，又號仲芸，馬佳氏，內務府正...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1031616</th>\n",
+       "      <td>人形\\n\\n人形可以指：\\n⧼* 人偶\\n</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1031617</th>\n",
+       "      <td>成山（道光壬辰進士）\\n\\n成山（1791年 - ？），字屏臨，號進齋，滿洲正藍旗人。道光八...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1031618</th>\n",
+       "      <td>穆通阿\\n\\n穆通阿（1794年 - ？），鈕祜祿氏，字子理，號似山，滿洲鑲黃旗人。道光八年...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1031619</th>\n",
+       "      <td>警察之家\\n\\n《警察之家》（；），是所撰寫的「」的系列，目前已出至第二卷。而作者加藤之前已...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1031620 rows × 1 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                      Data\n",
+       "0        數學\\n\\n數學是利用符號語言研究數量、結構、變化以及空間等概念的一門學科，從某種角度看屬於...\n",
+       "1        哲學\\n\\n哲學（）是研究普遍的、根本的問題的學科，包括存在、知識、價值、理智、心靈、語言等...\n",
+       "2        文學\\n\\n文學（），在最廣泛的意義上，是任何單一的書面作品。\\n\\n更嚴格地說，文學寫作被...\n",
+       "3        歷史\\n\\n歷史（現代漢語詞彙，古典文言文稱之爲史），指人類社會過去的事件和行動，以及對這些...\n",
+       "4        計算機科學\\n\\n計算機科學（，有時縮寫爲）是系統性研究信息與計算的理論基礎以及它們在計算機...\n",
+       "...                                                    ...\n",
+       "1031615  福暉\\n\\n福暉，原名福明（1796年 - ？），字子受，號鏡如，又號仲芸，馬佳氏，內務府正...\n",
+       "1031616                              人形\\n\\n人形可以指：\\n⧼* 人偶\\n\n",
+       "1031617  成山（道光壬辰進士）\\n\\n成山（1791年 - ？），字屏臨，號進齋，滿洲正藍旗人。道光八...\n",
+       "1031618  穆通阿\\n\\n穆通阿（1794年 - ？），鈕祜祿氏，字子理，號似山，滿洲鑲黃旗人。道光八年...\n",
+       "1031619  警察之家\\n\\n《警察之家》（；），是所撰寫的「」的系列，目前已出至第二卷。而作者加藤之前已...\n",
+       "\n",
+       "[1031620 rows x 1 columns]"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eab9964c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "86f3e77f",
+   "id": "04242142",
    "metadata": {},
    "outputs": [],
    "source": []
