--- a/NLP_HW4.ipynb
+++ b/NLP_HW4.ipynb
@@ -133,7 +133,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "61de7153",
+   "id": "adedb4dd",
    "metadata": {},
    "outputs": [
     {
@@ -183,7 +183,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "b679457b",
+   "id": "069634e5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +196,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "952af33d",
+   "id": "ab51ea99",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -257,18 +257,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "deab9dc2",
+   "execution_count": 28,
+   "id": "cd28dd90",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df['Data'] = texts"
+    "df['Data'] = texts\n",
+    "df['cut'] = texts"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "id": "586ab253",
+   "execution_count": 29,
+   "id": "304fd7f1",
    "metadata": {},
    "outputs": [
     {
@@ -293,76 +294,261 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>Data</th>\n",
+       "      <th>cut</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>數學\\n\\n數學是利用符號語言研究數量、結構、變化以及空間等概念的一門學科，從某種角度看屬於...</td>\n",
+       "      <td>數學\\n\\n數學是利用符號語言研究數量、結構、變化以及空間等概念的一門學科，從某種角度看屬於...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
+       "      <td>哲學\\n\\n哲學（）是研究普遍的、根本的問題的學科，包括存在、知識、價值、理智、心靈、語言等...</td>\n",
        "      <td>哲學\\n\\n哲學（）是研究普遍的、根本的問題的學科，包括存在、知識、價值、理智、心靈、語言等...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>文學\\n\\n文學（），在最廣泛的意義上，是任何單一的書面作品。\\n\\n更嚴格地說，文學寫作被...</td>\n",
+       "      <td>文學\\n\\n文學（），在最廣泛的意義上，是任何單一的書面作品。\\n\\n更嚴格地說，文學寫作被...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
+       "      <td>歷史\\n\\n歷史（現代漢語詞彙，古典文言文稱之爲史），指人類社會過去的事件和行動，以及對這些...</td>\n",
        "      <td>歷史\\n\\n歷史（現代漢語詞彙，古典文言文稱之爲史），指人類社會過去的事件和行動，以及對這些...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>計算機科學\\n\\n計算機科學（，有時縮寫爲）是系統性研究信息與計算的理論基礎以及它們在計算機...</td>\n",
+       "      <td>計算機科學\\n\\n計算機科學（，有時縮寫爲）是系統性研究信息與計算的理論基礎以及它們在計算機...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
+       "      <td>...</td>\n",
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1031615</th>\n",
        "      <td>福暉\\n\\n福暉，原名福明（1796年 - ？），字子受，號鏡如，又號仲芸，馬佳氏，內務府正...</td>\n",
+       "      <td>福暉\\n\\n福暉，原名福明（1796年 - ？），字子受，號鏡如，又號仲芸，馬佳氏，內務府正...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1031616</th>\n",
+       "      <td>人形\\n\\n人形可以指：\\n⧼* 人偶\\n</td>\n",
        "      <td>人形\\n\\n人形可以指：\\n⧼* 人偶\\n</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1031617</th>\n",
        "      <td>成山（道光壬辰進士）\\n\\n成山（1791年 - ？），字屏臨，號進齋，滿洲正藍旗人。道光八...</td>\n",
+       "      <td>成山（道光壬辰進士）\\n\\n成山（1791年 - ？），字屏臨，號進齋，滿洲正藍旗人。道光八...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1031618</th>\n",
+       "      <td>穆通阿\\n\\n穆通阿（1794年 - ？），鈕祜祿氏，字子理，號似山，滿洲鑲黃旗人。道光八年...</td>\n",
        "      <td>穆通阿\\n\\n穆通阿（1794年 - ？），鈕祜祿氏，字子理，號似山，滿洲鑲黃旗人。道光八年...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1031619</th>\n",
        "      <td>警察之家\\n\\n《警察之家》（；），是所撰寫的「」的系列，目前已出至第二卷。而作者加藤之前已...</td>\n",
+       "      <td>警察之家\\n\\n《警察之家》（；），是所撰寫的「」的系列，目前已出至第二卷。而作者加藤之前已...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1031620 rows × 1 columns</p>\n",
+       "<p>1031620 rows × 2 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                                      Data\n",
-       "0        數學\\n\\n數學是利用符號語言研究數量、結構、變化以及空間等概念的一門學科，從某種角度看屬於...\n",
-       "1        哲學\\n\\n哲學（）是研究普遍的、根本的問題的學科，包括存在、知識、價值、理智、心靈、語言等...\n",
-       "2        文學\\n\\n文學（），在最廣泛的意義上，是任何單一的書面作品。\\n\\n更嚴格地說，文學寫作被...\n",
-       "3        歷史\\n\\n歷史（現代漢語詞彙，古典文言文稱之爲史），指人類社會過去的事件和行動，以及對這些...\n",
-       "4        計算機科學\\n\\n計算機科學（，有時縮寫爲）是系統性研究信息與計算的理論基礎以及它們在計算機...\n",
-       "...                                                    ...\n",
-       "1031615  福暉\\n\\n福暉，原名福明（1796年 - ？），字子受，號鏡如，又號仲芸，馬佳氏，內務府正...\n",
-       "1031616                              人形\\n\\n人形可以指：\\n⧼* 人偶\\n\n",
-       "1031617  成山（道光壬辰進士）\\n\\n成山（1791年 - ？），字屏臨，號進齋，滿洲正藍旗人。道光八...\n",
-       "1031618  穆通阿\\n\\n穆通阿（1794年 - ？），鈕祜祿氏，字子理，號似山，滿洲鑲黃旗人。道光八年...\n",
-       "1031619  警察之家\\n\\n《警察之家》（；），是所撰寫的「」的系列，目前已出至第二卷。而作者加藤之前已...\n",
+       "                                                      Data  \\\n",
+       "0        數學\\n\\n數學是利用符號語言研究數量、結構、變化以及空間等概念的一門學科，從某種角度看屬於...   \n",
+       "1        哲學\\n\\n哲學（）是研究普遍的、根本的問題的學科，包括存在、知識、價值、理智、心靈、語言等...   \n",
+       "2        文學\\n\\n文學（），在最廣泛的意義上，是任何單一的書面作品。\\n\\n更嚴格地說，文學寫作被...   \n",
+       "3        歷史\\n\\n歷史（現代漢語詞彙，古典文言文稱之爲史），指人類社會過去的事件和行動，以及對這些...   \n",
+       "4        計算機科學\\n\\n計算機科學（，有時縮寫爲）是系統性研究信息與計算的理論基礎以及它們在計算機...   \n",
+       "...                                                    ...   \n",
+       "1031615  福暉\\n\\n福暉，原名福明（1796年 - ？），字子受，號鏡如，又號仲芸，馬佳氏，內務府正...   \n",
+       "1031616                              人形\\n\\n人形可以指：\\n⧼* 人偶\\n   \n",
+       "1031617  成山（道光壬辰進士）\\n\\n成山（1791年 - ？），字屏臨，號進齋，滿洲正藍旗人。道光八...   \n",
+       "1031618  穆通阿\\n\\n穆通阿（1794年 - ？），鈕祜祿氏，字子理，號似山，滿洲鑲黃旗人。道光八年...   \n",
+       "1031619  警察之家\\n\\n《警察之家》（；），是所撰寫的「」的系列，目前已出至第二卷。而作者加藤之前已...   \n",
        "\n",
-       "[1031620 rows x 1 columns]"
+       "                                                       cut  \n",
+       "0        數學\\n\\n數學是利用符號語言研究數量、結構、變化以及空間等概念的一門學科，從某種角度看屬於...  \n",
+       "1        哲學\\n\\n哲學（）是研究普遍的、根本的問題的學科，包括存在、知識、價值、理智、心靈、語言等...  \n",
+       "2        文學\\n\\n文學（），在最廣泛的意義上，是任何單一的書面作品。\\n\\n更嚴格地說，文學寫作被...  \n",
+       "3        歷史\\n\\n歷史（現代漢語詞彙，古典文言文稱之爲史），指人類社會過去的事件和行動，以及對這些...  \n",
+       "4        計算機科學\\n\\n計算機科學（，有時縮寫爲）是系統性研究信息與計算的理論基礎以及它們在計算機...  \n",
+       "...                                                    ...  \n",
+       "1031615  福暉\\n\\n福暉，原名福明（1796年 - ？），字子受，號鏡如，又號仲芸，馬佳氏，內務府正...  \n",
+       "1031616                              人形\\n\\n人形可以指：\\n⧼* 人偶\\n  \n",
+       "1031617  成山（道光壬辰進士）\\n\\n成山（1791年 - ？），字屏臨，號進齋，滿洲正藍旗人。道光八...  \n",
+       "1031618  穆通阿\\n\\n穆通阿（1794年 - ？），鈕祜祿氏，字子理，號似山，滿洲鑲黃旗人。道光八年...  \n",
+       "1031619  警察之家\\n\\n《警察之家》（；），是所撰寫的「」的系列，目前已出至第二卷。而作者加藤之前已...  \n",
+       "\n",
+       "[1031620 rows x 2 columns]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "f7189b46",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Building prefix dict from the default dictionary ...\n",
+      "Loading model from cache C:\\Users\\Steven\\AppData\\Local\\Temp\\jieba.cache\n",
+      "Loading model cost 0.754 seconds.\n",
+      "Prefix dict has been built successfully.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import jieba\n",
+    "import re\n",
+    "\n",
+    "def content_cut(text):\n",
+    "    specialChars = \"!#$%^&*()《  》\"\n",
+    "    text = text.replace(\"★\" , \"\").replace(\"\\r\\n\" , \"\").replace(\"！\",\"\").replace(\"《\",\"\").replace(\"》\",\"\").replace(\"，\",\"\").replace(\"/\",\"\").replace(\"（\",\"\").replace(\"）\",\"\").replace(\"\\n\",\"\").replace(specialChars,\"\")\n",
+    "    return \" \".join(list(jieba.cut(text)))\n",
+    "\n",
+    "df['cut'] = df['cut'].map(content_cut)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "a87d2db5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Data</th>\n",
+       "      <th>cut</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>數學\\n\\n數學是利用符號語言研究數量、結構、變化以及空間等概念的一門學科，從某種角度看屬於...</td>\n",
+       "      <td>數學 數學 是 利用 符號 語言 研究 數量 、 結構 、 變化 以及 空間 等 概念 的 ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>哲學\\n\\n哲學（）是研究普遍的、根本的問題的學科，包括存在、知識、價值、理智、心靈、語言等...</td>\n",
+       "      <td>哲學 哲學 是 研究 普遍 的 、 根本 的 問題 的 學科 包括 存在 、 知識 、 價值...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>文學\\n\\n文學（），在最廣泛的意義上，是任何單一的書面作品。\\n\\n更嚴格地說，文學寫作被...</td>\n",
+       "      <td>文學 文學 在 最廣泛 的 意義上 是 任何 單一 的 書面 作品 。 更 嚴格 地 說 文...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>歷史\\n\\n歷史（現代漢語詞彙，古典文言文稱之爲史），指人類社會過去的事件和行動，以及對這些...</td>\n",
+       "      <td>歷史 歷史 現代漢語 詞 彙 古典 文言文 稱 之 爲 史 指人類 社會過 去 的 事件 和...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>計算機科學\\n\\n計算機科學（，有時縮寫爲）是系統性研究信息與計算的理論基礎以及它們在計算機...</td>\n",
+       "      <td>計算 機科學 計算 機科學 有 時縮 寫 爲 是 系 統性 研究 信息 與 計算 的 理論 ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1031615</th>\n",
+       "      <td>福暉\\n\\n福暉，原名福明（1796年 - ？），字子受，號鏡如，又號仲芸，馬佳氏，內務府正...</td>\n",
+       "      <td>福暉 福暉 原名 福明 1796 年   -   ？ 字子 受號 鏡 如 又 號仲芸馬佳氏 ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1031616</th>\n",
+       "      <td>人形\\n\\n人形可以指：\\n⧼* 人偶\\n</td>\n",
+       "      <td>人形 人形 可以 指 ： ⧼ *   人偶</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1031617</th>\n",
+       "      <td>成山（道光壬辰進士）\\n\\n成山（1791年 - ？），字屏臨，號進齋，滿洲正藍旗人。道光八...</td>\n",
+       "      <td>成山 道光 壬辰 進士 成山 1791 年   -   ？ 字屏 臨號 進齋 滿洲 正 藍 ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1031618</th>\n",
+       "      <td>穆通阿\\n\\n穆通阿（1794年 - ？），鈕祜祿氏，字子理，號似山，滿洲鑲黃旗人。道光八年...</td>\n",
+       "      <td>穆通 阿 穆通 阿 1794 年   -   ？ 鈕祜祿氏 字 子理 號似 山滿洲 鑲 黃 ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1031619</th>\n",
+       "      <td>警察之家\\n\\n《警察之家》（；），是所撰寫的「」的系列，目前已出至第二卷。而作者加藤之前已...</td>\n",
+       "      <td>警察 之 家 警察 之 家 ； 是 所撰 寫 的 「 」 的 系列 目前 已出 至 第二卷 ...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1031620 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                      Data  \\\n",
+       "0        數學\\n\\n數學是利用符號語言研究數量、結構、變化以及空間等概念的一門學科，從某種角度看屬於...   \n",
+       "1        哲學\\n\\n哲學（）是研究普遍的、根本的問題的學科，包括存在、知識、價值、理智、心靈、語言等...   \n",
+       "2        文學\\n\\n文學（），在最廣泛的意義上，是任何單一的書面作品。\\n\\n更嚴格地說，文學寫作被...   \n",
+       "3        歷史\\n\\n歷史（現代漢語詞彙，古典文言文稱之爲史），指人類社會過去的事件和行動，以及對這些...   \n",
+       "4        計算機科學\\n\\n計算機科學（，有時縮寫爲）是系統性研究信息與計算的理論基礎以及它們在計算機...   \n",
+       "...                                                    ...   \n",
+       "1031615  福暉\\n\\n福暉，原名福明（1796年 - ？），字子受，號鏡如，又號仲芸，馬佳氏，內務府正...   \n",
+       "1031616                              人形\\n\\n人形可以指：\\n⧼* 人偶\\n   \n",
+       "1031617  成山（道光壬辰進士）\\n\\n成山（1791年 - ？），字屏臨，號進齋，滿洲正藍旗人。道光八...   \n",
+       "1031618  穆通阿\\n\\n穆通阿（1794年 - ？），鈕祜祿氏，字子理，號似山，滿洲鑲黃旗人。道光八年...   \n",
+       "1031619  警察之家\\n\\n《警察之家》（；），是所撰寫的「」的系列，目前已出至第二卷。而作者加藤之前已...   \n",
+       "\n",
+       "                                                       cut  \n",
+       "0        數學 數學 是 利用 符號 語言 研究 數量 、 結構 、 變化 以及 空間 等 概念 的 ...  \n",
+       "1        哲學 哲學 是 研究 普遍 的 、 根本 的 問題 的 學科 包括 存在 、 知識 、 價值...  \n",
+       "2        文學 文學 在 最廣泛 的 意義上 是 任何 單一 的 書面 作品 。 更 嚴格 地 說 文...  \n",
+       "3        歷史 歷史 現代漢語 詞 彙 古典 文言文 稱 之 爲 史 指人類 社會過 去 的 事件 和...  \n",
+       "4        計算 機科學 計算 機科學 有 時縮 寫 爲 是 系 統性 研究 信息 與 計算 的 理論 ...  \n",
+       "...                                                    ...  \n",
+       "1031615  福暉 福暉 原名 福明 1796 年   -   ？ 字子 受號 鏡 如 又 號仲芸馬佳氏 ...  \n",
+       "1031616                              人形 人形 可以 指 ： ⧼ *   人偶  \n",
+       "1031617  成山 道光 壬辰 進士 成山 1791 年   -   ？ 字屏 臨號 進齋 滿洲 正 藍 ...  \n",
+       "1031618  穆通 阿 穆通 阿 1794 年   -   ？ 鈕祜祿氏 字 子理 號似 山滿洲 鑲 黃 ...  \n",
+       "1031619  警察 之 家 警察 之 家 ； 是 所撰 寫 的 「 」 的 系列 目前 已出 至 第二卷 ...  \n",
+       "\n",
+       "[1031620 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -374,7 +560,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "04242142",
+   "id": "2efdab31",
    "metadata": {},
    "outputs": [],
    "source": []
