--- a/NLP_HW4.ipynb
+++ b/NLP_HW4.ipynb
@@ -133,7 +133,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "adedb4dd",
+   "id": "7d34ab89",
    "metadata": {},
    "outputs": [
     {
@@ -183,7 +183,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "069634e5",
+   "id": "7cddfd45",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +196,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "ab51ea99",
+   "id": "e9fe11ad",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -258,7 +258,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "cd28dd90",
+   "id": "95d5a927",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -269,7 +269,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "304fd7f1",
+   "id": "15bc2f0f",
    "metadata": {},
    "outputs": [
     {
@@ -400,7 +400,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "f7189b46",
+   "id": "14a3aca0",
    "metadata": {},
    "outputs": [
     {
@@ -429,7 +429,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "a87d2db5",
+   "id": "d29992fc",
    "metadata": {},
    "outputs": [
     {
@@ -560,10 +560,83 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2efdab31",
+   "id": "44c0f3e9",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "cut=[]\n",
+    "for text in texts:\n",
+    "    text = text.replace(\"★\" , \"\").replace(\"\\r\\n\" , \"\").replace(\"！\",\"\").replace(\"《\",\"\").replace(\"》\",\"\").replace(\"，\",\"\").replace(\"/\",\"\").replace(\"（\",\"\").replace(\"）\",\"\").replace(\"\\n\",\"\").replace(\"?\",\"\").replace(\"「\",\"\").replace(\"」\",\"\").replace(\"(\",\"\").replace(\")\",\"\").replace(\"*\",\"\").replace(\";\",\"\").replace(\" \",\"\").replace(\"。\",\"\").replace(\"、\",\"\").replace(\"：\",\"\")\n",
+    "    segs = jieba.cut(text, cut_all=False, HMM=True)\n",
+    "    tC = []\n",
+    "    for s in segs:\n",
+    "        tC.append(s)\n",
+    "    cut.append(tC)\n",
+    "    del tc\n",
+    "df['切'] = cut"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7f0e4e21",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from gensim.models.word2vec import Word2Vec\n",
+    "# Settings\n",
+    "seed = 666\n",
+    "sg = 0\n",
+    "window_size = 10\n",
+    "vector_size = 100\n",
+    "min_count = 1\n",
+    "workers = 4\n",
+    "epochs = 5\n",
+    "batch_words = 10000\n",
+    "\n",
+    "train_data = cut\n",
+    "model = Word2Vec(\n",
+    "    train_data,\n",
+    "    min_count=min_count,\n",
+    "    vector_size=vector_size,\n",
+    "    workers=workers,\n",
+    "    epochs=epochs,\n",
+    "    window=window_size,\n",
+    "    sg=sg,\n",
+    "    seed=seed,\n",
+    "    batch_words=batch_words\n",
+    ")\n",
+    "\n",
+    "model.save('word2vec.model')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "19b52aff",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def most_similar(w2v_model, words, topn=20):\n",
+    "    similar_df = pd.DataFrame()\n",
+    "    for word in words:\n",
+    "        try:\n",
+    "            similar_words = pd.DataFrame(w2v_model.wv.most_similar(word, topn=topn), columns=[word, 'cos'])\n",
+    "            similar_df = pd.concat([similar_df, similar_words], axis=1)\n",
+    "        except:\n",
+    "            print(word, \"not found in Word2Vec model!\")\n",
+    "    return similar_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d0e6f5bf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "most_similar(model, ['文學'])"
+   ]
   }
  ],
  "metadata": {
