--- a/NLP_HW4.ipynb
+++ b/NLP_HW4.ipynb
@@ -1391,7 +1391,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "eb396c06",
+   "id": "87c66e5e",
    "metadata": {},
    "outputs": [
     {
@@ -1930,7 +1930,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "3648d9de",
+   "id": "95a120a6",
    "metadata": {},
    "outputs": [
     {
@@ -2099,7 +2099,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "1190fcb7",
+   "id": "74165298",
    "metadata": {},
    "outputs": [
     {
@@ -2267,8 +2267,147 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 28,
+   "id": "f21722e5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Data</th>\n",
+       "      <th>切</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>數學\\n\\n數學是利用符號語言研究數量、結構、變化以及空間等概念的一門學科，從某種角度看屬於...</td>\n",
+       "      <td>[數學, 數學, 是, 利用, 符號, 語言, 研究, 數量, 結構, 變化, 以及, 空間...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>哲學\\n\\n哲學（）是研究普遍的、根本的問題的學科，包括存在、知識、價值、理智、心靈、語言等...</td>\n",
+       "      <td>[哲學, 哲學, 是, 研究, 普遍, 的, 根本, 的, 問題, 的, 學科, 包括, 存...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>文學\\n\\n文學（），在最廣泛的意義上，是任何單一的書面作品。\\n\\n更嚴格地說，文學寫作被...</td>\n",
+       "      <td>[文學, 文學, 在, 最廣泛, 的, 意義上, 是, 任何, 單一, 的, 書面, 作品,...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>歷史\\n\\n歷史（現代漢語詞彙，古典文言文稱之爲史），指人類社會過去的事件和行動，以及對這些...</td>\n",
+       "      <td>[歷史, 歷史, 現代漢語, 詞, 彙, 古典, 文言文, 稱, 之, 爲, 史, 指人類,...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>計算機科學\\n\\n計算機科學（，有時縮寫爲）是系統性研究信息與計算的理論基礎以及它們在計算機...</td>\n",
+       "      <td>[計算, 機科學, 計算, 機科學, 有, 時縮, 寫, 爲, 是, 系, 統性, 研究, ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1043219</th>\n",
+       "      <td>福暉\\n\\n福暉，原名福明（1796年 - ？），字子受，號鏡如，又號仲芸，馬佳氏，內務府正...</td>\n",
+       "      <td>[福暉, 福暉, 原名, 福明, 1796, 年, -, ？, 字子, 受號, 鏡, 如, ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1043220</th>\n",
+       "      <td>人形\\n\\n人形可以指：\\n⧼* 人偶\\n</td>\n",
+       "      <td>[人形, 人形, 可以, 指, ⧼, 人偶]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1043221</th>\n",
+       "      <td>成山（道光壬辰進士）\\n\\n成山（1791年 - ？），字屏臨，號進齋，滿洲正藍旗人。道光八...</td>\n",
+       "      <td>[成山, 道光, 壬辰, 進士, 成山, 1791, 年, -, ？, 字屏, 臨號, 進齋...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1043222</th>\n",
+       "      <td>穆通阿\\n\\n穆通阿（1794年 - ？），鈕祜祿氏，字子理，號似山，滿洲鑲黃旗人。道光八年...</td>\n",
+       "      <td>[穆通, 阿, 穆通, 阿, 1794, 年, -, ？, 鈕祜祿氏, 字, 子理, 號似,...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1043223</th>\n",
+       "      <td>警察之家\\n\\n《警察之家》（；），是所撰寫的「」的系列，目前已出至第二卷。而作者加藤之前已...</td>\n",
+       "      <td>[警察, 之, 家, 警察, 之, 家, ；, 是, 所撰, 寫, 的, 的, 系列, 目前...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1043224 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                      Data  \\\n",
+       "0        數學\\n\\n數學是利用符號語言研究數量、結構、變化以及空間等概念的一門學科，從某種角度看屬於...   \n",
+       "1        哲學\\n\\n哲學（）是研究普遍的、根本的問題的學科，包括存在、知識、價值、理智、心靈、語言等...   \n",
+       "2        文學\\n\\n文學（），在最廣泛的意義上，是任何單一的書面作品。\\n\\n更嚴格地說，文學寫作被...   \n",
+       "3        歷史\\n\\n歷史（現代漢語詞彙，古典文言文稱之爲史），指人類社會過去的事件和行動，以及對這些...   \n",
+       "4        計算機科學\\n\\n計算機科學（，有時縮寫爲）是系統性研究信息與計算的理論基礎以及它們在計算機...   \n",
+       "...                                                    ...   \n",
+       "1043219  福暉\\n\\n福暉，原名福明（1796年 - ？），字子受，號鏡如，又號仲芸，馬佳氏，內務府正...   \n",
+       "1043220                              人形\\n\\n人形可以指：\\n⧼* 人偶\\n   \n",
+       "1043221  成山（道光壬辰進士）\\n\\n成山（1791年 - ？），字屏臨，號進齋，滿洲正藍旗人。道光八...   \n",
+       "1043222  穆通阿\\n\\n穆通阿（1794年 - ？），鈕祜祿氏，字子理，號似山，滿洲鑲黃旗人。道光八年...   \n",
+       "1043223  警察之家\\n\\n《警察之家》（；），是所撰寫的「」的系列，目前已出至第二卷。而作者加藤之前已...   \n",
+       "\n",
+       "                                                         切  \n",
+       "0        [數學, 數學, 是, 利用, 符號, 語言, 研究, 數量, 結構, 變化, 以及, 空間...  \n",
+       "1        [哲學, 哲學, 是, 研究, 普遍, 的, 根本, 的, 問題, 的, 學科, 包括, 存...  \n",
+       "2        [文學, 文學, 在, 最廣泛, 的, 意義上, 是, 任何, 單一, 的, 書面, 作品,...  \n",
+       "3        [歷史, 歷史, 現代漢語, 詞, 彙, 古典, 文言文, 稱, 之, 爲, 史, 指人類,...  \n",
+       "4        [計算, 機科學, 計算, 機科學, 有, 時縮, 寫, 爲, 是, 系, 統性, 研究, ...  \n",
+       "...                                                    ...  \n",
+       "1043219  [福暉, 福暉, 原名, 福明, 1796, 年, -, ？, 字子, 受號, 鏡, 如, ...  \n",
+       "1043220                             [人形, 人形, 可以, 指, ⧼, 人偶]  \n",
+       "1043221  [成山, 道光, 壬辰, 進士, 成山, 1791, 年, -, ？, 字屏, 臨號, 進齋...  \n",
+       "1043222  [穆通, 阿, 穆通, 阿, 1794, 年, -, ？, 鈕祜祿氏, 字, 子理, 號似,...  \n",
+       "1043223  [警察, 之, 家, 警察, 之, 家, ；, 是, 所撰, 寫, 的, 的, 系列, 目前...  \n",
+       "\n",
+       "[1043224 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "df49ac66",
+   "metadata": {},
+   "source": [
+    "# 本來想用pandas但是放進word2vec裡無法使用，最後還是用陣列 "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "78bff645",
+   "id": "de4949ec",
    "metadata": {},
    "outputs": [],
    "source": []
